--- a/AwesomeTSProject/package.json
+++ b/AwesomeTSProject/package.json
@@ -6,9 +6,12 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+     "test": "yarn test:lint && yarn test:types && yarn test:unit",
+    "test:lint": "eslint . --ext .js,.ts,.tsx",
+    "test:types": "tsc --noEmit",
+    "test:unit": "jest"
   },
   "dependencies": {
     "react": "17.0.1",
