--- a/AwesomeTSProject/package.json
+++ b/AwesomeTSProject/package.json
@@ -8,12 +8,13 @@
     "start": "react-native start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "postinstall": "patch-package",
-     "test": "yarn test:lint && yarn test:types && yarn test:unit",
+    "test": "yarn test:lint && yarn test:types && yarn test:unit",
     "test:lint": "eslint . --ext .js,.ts,.tsx",
     "test:types": "tsc --noEmit",
     "test:unit": "jest"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1"
   },
@@ -21,6 +22,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^7.24.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "nock": "^13.1.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "17.0.1",
